--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-bootstrap-accordion": "^1.0.0",
     "react-bootstrap-card": "^0.2.1",
     "react-dom": "^18.2.0",
+    "react-faq-component": "^1.3.4",
     "react-icons": "^4.4.0",
     "react-scripts": "5.0.1",
     "react-scroll-parallax": "^3.2.0",
